# leleleplayer

./: CMakeLists.txt  LICENSE  Makefile  README.md  TODO  Windows_toolchain.cmake  amp_sort.c  analyse  analyse.h  analyze.c  analyze.h  decode.c  envelope.c  freq_sort.c  gschemas.compiled  gui.c  gui.h  gui.ui  gui_dummy.c  main.c  org.gnome.leleleplayer.gschema.xml  org.leleleplayer.gschema.xml
images/: lelelerandom.svg.bak
resources/: compile-schemas.cmake  gui.ui  leleleplayer.desktop  org.gnome.leleleplayer.gschema.xml
src/: amp_sort.c  analyze.c  analyze.h  callbacks.c  decode.c  envelope.c  freq_sort.c  gtk_gst_utility.c  gui.c  gui.c.bak  gui.h  gui_dummy.c  leleleserver.c
