cmake_minimum_required(VERSION 3.0)

project(leleleplayer C)

find_package(PkgConfig REQUIRED)

pkg_check_modules(MULTIMEDIA REQUIRED gstreamer-1.0 gstreamer-video-1.0 libxml-2.0 gstreamer-pbutils-1.0)
pkg_check_modules(BLISS REQUIRED libavcodec libavutil libavformat)

set(GCC_BLISS_LINK_FLAGS "-lbliss")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}${GCC_BLISS_LINK_FLAGS}")

pkg_check_modules(GTK REQUIRED gtk+-3.0)

include_directories(${MULTIMEDIA_INCLUDE_DIRS} ${GTK_INCLUDE_DIRS} ${BLISS_INCLUDE_DIRS})
link_directories(${MULTIMEDIA_LIBRARY_DIRS} ${GTK_LIBRARY_DIRS})
add_definitions(${MULTIMEDIA_CFLAGS_OTHER} ${GTK_CFLAGS_OTHER})

add_executable(leleleplayer WIN32 src/gui.c src/callbacks.c src/gtk_gst_utility.c)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
add_executable(leleleserver WIN32 src/leleleserver.c)
target_link_libraries(leleleplayer ${GTK_LIBRARIES} ${MULTIMEDIA_LIBRARIES} "-lbliss")
target_link_libraries(leleleserver ${GTK_LIBRARIES} ${MULTIMEDIA_LIBRARIES} "-lbliss")

foreach(EXE leleleplayer leleleserver)
	target_link_libraries(${EXE} "-lbliss" ${CMAKE_C_FLAGS} m)
endforeach ()

if(NOT WIN32)
	set(CMAKE_INSTALL_PREFIX /usr)
endif()
set_property(TARGET leleleplayer PROPERTY C_STANDARD 99)
set_property(TARGET leleleserver PROPERTY C_STANDARD 99)

if(WIN32)
	install(TARGETS leleleplayer RUNTIME DESTINATION bin COMPONENT applications)
	install(DIRECTORY build_windows/images DESTINATION . COMPONENT applications)
	install(DIRECTORY build_windows/lib DESTINATION . COMPONENT applications)
	install(DIRECTORY build_windows/bin DESTINATION . COMPONENT applications)
	install(DIRECTORY build_windows/share DESTINATION . COMPONENT applications)
	install(FILES build_windows/gschemas.compiled DESTINATION . COMPONENT applications)

	set(CPACK_PACKAGE_NAME "Leleleplayer")
	set(CPACK_PACKAGE_VENDOR "Polochon_street")
	set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "An open-source audio player and an intelligent playlist creator")
	set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}\\\\images\\\\lelele.ico")
	set(CPACK_NSIS_MUI_UNIICON "${CMAKE_SOURCE_DIR}\\\\images\\\\lelele.ico")
	set(CPACK_PACKAGE_VERSION_MAJOR "0")
	set(CPACK_PACKAGE_VERSION_MINOR "1")
	set(CPACK_PACKAGE_VERSION_PATCH "2")
	set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
	set(CPACK_PACKAGE_INSTALL_DIRECTORY "leleleplayer")
	set(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\leleplayer.exe")
	set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
	set(CPACK_NSIS_MENU_LINKS "bin\\\\leleleplayer" "Leleleplayer")
	set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}\\\\images\\\\leleleplayer.bmp")
	set(CPACK_GENERATOR "NSIS")
	# TODO Find a workaround to avoid setting « SetOutPath » manually 
	include(CPack)
else()
	#set(CPACK_GENERATOR "DEB")
	set(CPACK_DEBIAN_PACKAGE_NAME "leleleplayer")
	set(CPACK_DEBIAN_PACKAGE_VERSION "0.7")
	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all")
	set(CPACK_DEBIAN_PACKAGE_DEPENDS "bliss-music, libgtk-3-0, gstreamer1.0-plugins-base, gstreamer1.0-plugins-bad, gstreamer1.0-plugins-good")
	set(CPACK_DEBIAN_PACKAGE_MAINTAINER "polochonstreet@gmx.fr")
	set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "An open-source audio player and an intelligent playlist creator")

	include(CPack)

	install(TARGETS leleleplayer DESTINATION bin)
	install(TARGETS leleleserver DESTINATION bin)
	install(SCRIPT "resources/compile-schemas.cmake")
	install(FILES "images/lelelerandom.svg" "images/leleleplayer.png" DESTINATION share/leleleplayer/icons/)
	install(FILES "images/leleleplayer.png" DESTINATION share/pixmaps)
	install(FILES "resources/leleleplayer.desktop" DESTINATION share/applications/)
	install(FILES "resources/gui.ui" DESTINATION share/leleleplayer/)
	install(FILES "resources/org.gnome.leleleplayer.gschema.xml" DESTINATION share/glib-2.0/schemas/)
endif()
